# pypromice-discharge

./: README.md  pyproject.toml  requirements.txt
config/: GIOS_LR.toml  GIOS_Russel.toml  GIOS_Watson_L.toml  dmi_air.toml  watson_bridge_raw.toml  watson_bridge_tx.toml
config/archive/: make_config.py  metadata_divers.csv
level_0/raw/: Baro-CB914_211004122728_CB914.MON  Baro-CB914_241114135522_CB914.csv  CTD_X2441_211004120808_X2441.MON  CTD_X6096_240930180247_X6096.csv  CTD_X6096_240930180247_X6096.xlsx  DELFT^85754^09-09-21 17-25-46.MON  Kan_bridge_BARO_150119122112_26162.CSV  Kan_bridge_BARO_151221150148_26162.MON  Kan_bridge_lower_CERA_151221144600_G4445.MON  Kan_bridge_lower_CERA_151221151011_B4392.MON  Kan_bridge_upper_CTD_150119122111_88034.CSV  Kan_bridge_upper_CTD_151221150629_88034.MON  KangerlussuaqBaro.MON  KangerlussuaqBaro^33065^08-09-25 13-23-15.MON  Kangerlussuaq^33065^07-04-14 13-36-27.MON  Kangerlussuaq^33065^08-05-07 23-57-12.MON  SDR.STRCTD^61514^08-05-07 23-44-11.MON  SDR.STRCTD^61514^08-09-23 01-29-54.MON  Sdr.Str.^42882^06-11-07 16-27-21.MON  Watson-lower U5421_211004102310_U5421.MON  Watson_Lower_Y5781_240930180840_Y5781.csv  Watson_Lower_Y5781_240930180840_Y5781.xlsx  Watson_Upper_Y6142_240930180926_Y6142.xlsx  baro-cb914_221115084604_CB914.MON  baro_161011191237_26162.MON  baro_171004114423_26162.MON  baro_190405131701_26162.MON  (+23 more)
meta/: discharge_meta.csv
pypromice-discharge/: get_watsontx.py  plot_var.py  tx_plot.py  water.py
src/: test_entry_point.py  water.py  water_raw.py  water_tx-GEUS3413W10WSM.py  water_tx.py
(+3 files in other folders)
